# pycon-chit-chat

./: LICENSE  README.md  chata_export.json  data.csv  pyproject.toml
cli/: prepare_messages.py
notebooks/: huggingface_usage.ipynb  lm_training.ipynb  lm_training_solved.ipynb
tg_bot/: bot.py  bot_solved.py  responder.py  settings.py
torchserve/: README.md  handler.py
