[tool.poetry]
name = "pycon-chit-chat"
version = "0.1.0"
description = ""
authors = ["d.tsimerman <d.tsimerman@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "*"
pydantic = "*"
pandas = "^1.4.3"
transformers = "^4.20.1"
datasets = "^2.3.2"
torchserve = "^0.6.0"
typer = "^0.6.1"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
